# minutaAI

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.yml  frenar_minutaai.bat  iniciar_minutaai.bat  init_repo.py  install.py  install_ffmpeg.py  install_manual.py  pyproject.toml  quick_start.py  run.py  setup.py  test_basic.py  test_example.py  test_ffmpeg.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md
templates/: index.html
